--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Marco A. Gallegos</span></p>
                       <p><span class="title-s">Profile: </span> <span>Full Stack Developer</span></p>
-                      <p><span class="title-s">Email: </span> <span><a href="mailto:ma.galle.loae@gmail.com">Send Mail</a></span></p>
+                      <p><span class="title-s">Email: </span> <span><a href="mailto:ma.galle.loae@gmail.com">Send Me a Mail</a></span></p>
                     </div>
                   </div>
                 </div>
