--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <style>
   .img-logos {
     padding-top: 5px;
-    height: 70px;
+    height: 100px;
   }
   .img-logos img {
     width: 25px;
@@ -35,6 +35,11 @@
   }
   .img-logos img:hover {
     transform: unset;
+  }
+  .modal-logo {
+    height: 30px;
+    margin-right:5px;
+    margin-left:5px;
   }
 
   /*
@@ -147,7 +152,7 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    WIP
+                    Web Developer with experience on Full Stack Development, Automate proccesess and enchance software using the newest practices estrategies and technologies is my passion, proud geek and addicted to learn.
                   </p>
                 </div>
               </div>
@@ -200,9 +205,9 @@
                     <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>BASH</span> <span class="pull-right">55%</span>
+                  <span>BASH</span> <span class="pull-right">75%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -390,6 +395,12 @@
             <p class="subtitle-a">
               Here you can find some projects
             </p>
+            <p class="subtitle-a">
+              Filter By Technology
+              <select name="" id="">
+                <option value="null">WIP</option>
+              </select>
+            </p>
             <div class="line-mf"></div>
           </div>
         </div>
@@ -425,14 +436,31 @@
           <div class="col-md-6 col-lg-4 " v-if="project.show" :key="index" >
             <div class="work-box">
               <div class="work-img">
-                <a href="img/work-6.jpg" data-lightbox="gallery-mf">
+                <a v-if="project.cover" :href="`img/${project.folder}/${project.cover}`" data-lightbox="gallery-mf">
+                  <img :src="`img/${project.folder}/${project.cover}`" alt="" class="img-fluid">
+                </a>
+                <a v-else href="img/work-1.jpg" data-lightbox="gallery-mf">
                   <img src="img/work-1.jpg" alt="" class="img-fluid">
                 </a>
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-xs-9 col-md-10">
-                    <h2 class="w-title">{{  project.name }}</h2>
+                    <h2 class="w-title">
+                      {{  project.name }}
+                      <a v-if="project.url" target="_blank" :href="project.url" class="btn btn-sm btn-outline-success"
+                        aria-label="check it online" data-balloon-pos="up" >
+                        <i class="fa fa-link" aria-hidden="true"></i>
+                      </a>
+                      <button v-else class="btn btn-sm btn-outline-danger" aria-hidden="true" aria-label="this project is not online :c" data-balloon-pos="up">
+                        <i class="fa fa-unlink"></i>
+                      </button>
+                      <a v-if="project.repos.length > 0 && project.repos[0]" :href="project.repos[0]" 
+                        target="_blank" class="btn btn-sm btn-outline-dark"
+                        aria-label="check the repository" data-balloon-pos="up">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                      </a>
+                    </h2>
                     <div class="w-more">
                       <span class="w-ctegory">{{ project.short_description }}</span> / <span class="w-date">{{ project.date }}</span>
                     </div>
@@ -463,7 +491,9 @@
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">{{ project.name }}</h5>
+            <h5 class="modal-title" id="exampleModalLabel">
+              {{ project.name }}
+            </h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -471,24 +501,59 @@
           <div class="modal-body">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-12">
+                <div class="col-md-8">
+                  <div class="row">
+                    <div v-for="(tech, index) in project.technologies" :key="index" class="py-2" :aria-label="tech.name" data-balloon-pos="up" >
+                      <img  :src="tech.logo" alt="" class="img-fluid modal-logo" >
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="row">
+                    <div v-for="(tech, index) in project.technologies" :key="index" class='px-1' >
+                      <span class="badge badge-primary">{{ tech.name }}</span>
+                    </div>
+                  </div>
+                </div>
+                
+                <div v-if="project.notes" class="col-12 py-1">
+                  <div class="alert alert-warning" role="alert">
+                    <p>{{ project.notes }}</p>
+                  </div>
+                </div>
+
+                <div  class="col-12 py-1">
+                  <div class="row">
+                    <div class="col-6 col-sm-4 col-md-3 col-lg-2">
+                      <div class="py-1 px-1" >
+                        <a v-if="project.url" target="_blank" :href="project.url" class="btn btn-sm btn-outline-success" >
+                          Check Online <i class="fa fa-link" aria-hidden="true"></i>
+                        </a>
+                        <button v-else class="btn btn-sm btn-outline-danger" aria-hidden="true">
+                          Is Offline <i class="fa fa-unlink"></i>
+                        </button>
+                      </div>
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3" v-for="(repo,index) in project.repos"  :key="index">
+                      <div class="py-1 px-1" >
+                        <a :href="repo" target="_blank" rel="noopener noreferrer" class="btn btn-sm btn-outline-dark" >
+                          Repository {{ index+1 }}
+                          <i class="fa fa-github" aria-hidden="true"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                
+                <div class="col-12 py-1">
                   <p>
                     {{ project.full_description }}
                   </p>
                 </div>
-
-                <div class="col-12">
-                  <div class="row img-logos">
-                    <div v-for="(tech, index) in project.technologies" :key="index" class="" :aria-label="tech.name" data-balloon-pos="up" >
-                      <img  :src="tech.logo" alt="" class="img-fluid" >
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
