chore(meta): og type

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta content="this is my porfolio" name="description">
 
   <meta property="og:title" content="Ing. Marco A. Gallegos" />
-  <meta property="og:type" content="website" />
+  <meta property="og:type" content="profile" />
   <meta property="og:url" content="https://github.com/marco-gallegos/marco-gallegos" />
   <meta property="og:image" content="https://marco-gallegos.github.io/marco-gallegos/img/yogi_eloso.jpg" />
 
