chore(index): meta tags

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta property="og:title" content="Ing. Marco A. Gallegos" />
   <meta property="og:url" content="https://github.com/marco-gallegos/marco-gallegos" />
-  <meta property="og:image" content="https://marco-gallegos.github.io/marco-gallegos/img/yogi_eloso.jpg" />
+  <!--meta property="og:image" content="https://marco-gallegos.github.io/marco-gallegos/img/yogi_eloso.jpg" /-->
 
   <meta property="og:type"                   content="og:product" />
   <meta property="og:title"                  content="Friend Smash Coin" />
