chore(index): added img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <meta property="og:type"                   content="og:product" />
   <meta property="og:title"                  content="Friend Smash Coin" />
-  <meta property="og:image"                  content="http://www.friendsmash.com/images/coin_600.png" />
+  <meta property="og:image"                  content="https://marco-gallegos.github.io/marco-gallegos/img/yogi_eloso_mini_50x50.jpg" />
   <meta property="og:description"            content="Friend Smash Coins to purchase upgrades and items!" />
   <meta property="og:url"                    content="http://www.friendsmash.com/og/coins.html" />
   <meta property="product:plural_title"      content="Friend Smash Coins" />
